Add puppet 3.3 and 3.4 to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 rvm:
   - 1.8.7
-  - 1.9.2
   - 1.9.3
 notifications:
   email:
@@ -11,12 +10,15 @@ env:
   - PUPPET_VERSION=3.0.2
   - PUPPET_VERSION=3.1.1
   - PUPPET_VERSION=3.2.4
+  - PUPPET_VERSION=3.3.2
+  - PUPPET_VERSION=3.4.1
 matrix:
   exclude:
-    - rvm: 1.9.2
-      env: PUPPET_VERSION=2.6.18
     - rvm: 1.9.3
       env: PUPPET_VERSION=2.6.18
 
 before_install:
   - gem update --system 2.1.11 #  todo: workaround for https://github.com/rubygems/rubygems/pull/763
+
+before_script:
+  - bundle list
