Allow failures in travis for ruby 2.1.0
Puppet is broken in ruby 2.1.0
https://tickets.puppetlabs.com/browse/PUP-1243

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ before_install:
 
 before_script:
   - bundle list
+
+matrix:
+  allow_failures:
+    - rvm: 2.1.0 # broken in puppet < 3.5.0 https://tickets.puppetlabs.com/browse/PUP-1243
