Issue #211 Update changelog and add puppet 3.6.0 to travis
metadata.version= no longer exists in Puppet 3.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - PUPPET_VERSION=3.3.2
   - PUPPET_VERSION=3.4.3
   - PUPPET_VERSION=3.5.1
+  - PUPPET_VERSION=3.6.0.rc1
 
 before_script:
   - puppet --version
