--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+sudo: false
 rvm:
-  - 2.1.0
-  - 2.0.0
-  - 1.9.3
+  - '2.2'
+  - '2.1'
+  - '2.0'
+  - '1.9'
 notifications:
   email:
     - carlos@apache.org
@@ -22,16 +24,35 @@ before_script:
 
 matrix:
   # Puppet < 3.5.0 is broken under ruby 2.1 https://tickets.puppetlabs.com/browse/PUP-1243
+  # Puppet < 3.8.0 is broken under ruby 2.2 https://tickets.puppetlabs.com/browse/PUP-3796
   exclude:
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 2.7.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.0.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.1.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.2.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.3.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.4.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 2.7.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.0.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.1.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.2.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.3.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.4.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.5.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.6.0"
+    - rvm: '2.2'
+      env: PUPPET_VERSION="~> 3.7.0"
