--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ notifications:
     - carlos@apache.org
     - tim@github.com
 env:
+  - PUPPET_VERSION="~> 4.1.0"
+  - PUPPET_VERSION="~> 4.0.0"
   - PUPPET_VERSION="~> 3.7.0"
   - PUPPET_VERSION="~> 3.6.0"
   - PUPPET_VERSION="~> 3.5.0"
